# DjangoTutorialApp

./: requirements.txt
django-polls/: setup.cfg
django-polls/django_polls_veir.egg-info/: PKG-INFO  SOURCES.txt
django-polls/polls/: admin.py  models.py  tests.py  views.py
django-polls/polls/migrations/: 0001_initial.py
django-polls/polls/templates/polls/: detail.html  index.html  results.html
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
